[package]
name = "precompile-utils"
authors = ["StakeTechnologies", "PureStake"]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.4.3"

[dependencies]
# There's a problem with --all-features when this is moved under dev-deps
evm = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
similar-asserts = { workspace = true, optional = true }

precompile-utils-macro = { workspace = true }

# Substrate
codec = { workspace = true, package = "parity-scale-codec" }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# Polkadot / XCM
xcm = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"evm/std",
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"xcm/std",
]
testing = ["similar-asserts", "std"]
