[package]
name = "pallet-evm-precompile-xcm"
authors = [ "Stake Technologies <devops@stake.co.jp>" ]
description = "Basic XCM support for EVM."
edition = "2021"
version = "1.0.0"

[dependencies]
precompile-utils = { path = "../utils", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
log = "0.4.16"

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.19", default-features = false }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.19", default-features = false }

[dev-dependencies]
serde = "1.0.100"
scale-info = "2.0"
derive_more = "0.99"
hex-literal = "0.3.4"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "fp-evm/std",
    "pallet-evm/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
]
