[package]
name = "pallet-evm-precompile-xcm"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Basic XCM support for EVM."
edition = "2021"
version = "0.4.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
pallet-evm-precompile-assets-erc20 = { path = "../assets-erc20", default-features = false }
pallet-xcm = { path = "../../frame/pallet-xcm", default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "polkadot-v0.9.24", default-features = false }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = "2.1.0"
serde = "1.0.100"

precompile-utils = { path = "../utils", features = ["testing"] }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-evm/std",
	"pallet-xcm/std",
	"pallet-evm-precompile-assets-erc20/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"xcm/std",
	"xcm-executor/std",
]
