[package]
name = "pallet-evm-precompile-xcm"
description = "Basic XCM support for EVM."
version = "0.9.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
num_enum = { workspace = true, default-features = false }
pallet-evm-precompile-assets-erc20 = { workspace = true }
pallet-xcm = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
codec = { workspace = true, package = "parity-scale-codec", features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-executor = { workspace = true }

[dev-dependencies]
derive_more = { workspace = true }
hex-literal = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

precompile-utils = { workspace = true, features = ["testing"] }

pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-evm/std",
	"pallet-xcm/std",
	"pallet-evm-precompile-assets-erc20/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"xcm/std",
	"xcm-executor/std",
]
