[package]
name = "pallet-evm-precompile-xvm"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Cross-VM call support for EVM."
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
pallet-xvm = { path = "../../frame/pallet-xvm", default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "shunsuke-debug", default-features = false }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "shunsuke-debug", default-features = false, features = ["forbid-evm-reentrancy"] }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = "2.1.0"
serde = "1.0.100"

precompile-utils = { path = "../utils", features = ["testing"] }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-xvm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
]
